--- a/cookbooks/kap/templates/default/deploywithcluster.parameters.json.erb
+++ b/cookbooks/kap/templates/default/deploywithcluster.parameters.json.erb
@@ -49,6 +49,15 @@
     },
     "kapagentid": {
       "value": "<%= @kapagentid %>"
-    }
+    },
+    "kapurl": {
+      "value": "<%= @kapurl %>"
+    },
+    "kyanalyzerurl": {
+      "value": "<%= @kyanalyzerurl %>"
+    },
+    "zeppelinurl": {
+      "value": "<%= @zeppelinurl %>"
+    },
   }
 }
