kap version control added three paramter

--- a/cookbooks/kap/templates/default/singlehdi.parameters.json.erb
+++ b/cookbooks/kap/templates/default/singlehdi.parameters.json.erb
@@ -61,6 +61,15 @@
     },
     "kapagentid": {
       "value": "<%= @kapagentid %>"
+    },
+    "kapurl": {
+      "value": "<%= @kapurl %>"
+    },
+    "kyanalyzerurl": {
+      "value": "<%= @kyanalyzerurl %>"
+    },
+    "zeppelinurl": {
+      "value": "<%= @zeppelinurl %>"
     }
   }
 }
