--- a/cookbooks/kap/templates/default/separatedhdi.parameters.json.erb
+++ b/cookbooks/kap/templates/default/separatedhdi.parameters.json.erb
@@ -64,6 +64,15 @@
     },
     "kapagentid": {
       "value": "<%= @kapagentid %>"
+    },
+    "kapurl": {
+      "value": "<%= @kapurl %>"
+    },
+    "kyanalyzerurl": {
+      "value": "<%= @kyanalyzerurl %>"
+    },
+    "zeppelinurl": {
+      "value": "<%= @zeppelinurl %>"
     }
   }
 }
