--- a/cookbooks/kap/templates/default/aws_chefServer.template.erb
+++ b/cookbooks/kap/templates/default/aws_chefServer.template.erb
@@ -125,6 +125,18 @@
     "InstanceCount":{
       "Description": "cluster admin username to be deployed",
       "Type": "String"
+    },
+    "kapurl":{
+      "Description": "kap package download url",
+      "Type": "String"
+    },
+    "kyanalyzerurl":{
+      "Description": "kyanalyzer package download url",
+      "Type": "String"
+    },
+    "zeppelinurl":{
+      "Description": "zeppelin package download url",
+      "Type": "String"
     }
   },
     "Mappings": {
@@ -732,6 +744,21 @@
                         "Ref": "apptype"
                       },
                       "/g' /home/ec2-user/chef11/chef-repo/cookbooks/kylin/attributes/default.rb;",
+                      "sed -i \"s/KAPURL/",
+                      {
+                        "Ref": "kapurl"
+                      },
+                      "/g\" /home/ec2-user/chef11/chef-repo/cookbooks/kylin/attributes/default.rb;",
+                      "sed -i \"s/KYANALYZERURL/",
+                      {
+                        "Ref": "kyanalyzerurl"
+                      },
+                      "/g\" /home/ec2-user/chef11/chef-repo/cookbooks/kylin/attributes/default.rb;",
+                      "sed -i \"s/ZEPPELINURL/",
+                      {
+                        "Ref": "zeppelinurl"
+                      },
+                      "/g\" /home/ec2-user/chef11/chef-repo/cookbooks/kylin/attributes/default.rb;",
                       "sed -i \"s/KYACCOUNTTOKEN/",
                       {
                         "Ref": "kyaccountToken"
