--- a/cookbooks/kap/templates/default/aws_chefServer.template.erb
+++ b/cookbooks/kap/templates/default/aws_chefServer.template.erb
@@ -743,7 +743,7 @@
                       {
                         "Ref": "apptype"
                       },
-                      "/g' /home/ec2-user/chef11/chef-repo/cookbooks/kylin/attributes/default.rb;",
+                      "/g\" /home/ec2-user/chef11/chef-repo/cookbooks/kylin/attributes/default.rb;",
                       "sed -i \"s/KAPURL/",
                       {
                         "Ref": "kapurl"
