--- a/cookbooks/kap/templates/default/aws_chefServer.template.erb
+++ b/cookbooks/kap/templates/default/aws_chefServer.template.erb
@@ -744,21 +744,21 @@
                         "Ref": "apptype"
                       },
                       "/g\" /home/ec2-user/chef11/chef-repo/cookbooks/kylin/attributes/default.rb;",
-                      "sed -i \"s/KAPURL/",
+                      "sed -i \"s|KAPURL|",
                       {
                         "Ref": "kapurl"
                       },
-                      "/g\" /home/ec2-user/chef11/chef-repo/cookbooks/kylin/attributes/default.rb;",
-                      "sed -i \"s/KYANALYZERURL/",
+                      "|g\" /home/ec2-user/chef11/chef-repo/cookbooks/kylin/attributes/default.rb;",
+                      "sed -i \"s|KYANALYZERURL|",
                       {
                         "Ref": "kyanalyzerurl"
                       },
-                      "/g\" /home/ec2-user/chef11/chef-repo/cookbooks/kylin/attributes/default.rb;",
-                      "sed -i \"s/ZEPPELINURL/",
+                      "|g\" /home/ec2-user/chef11/chef-repo/cookbooks/kylin/attributes/default.rb;",
+                      "sed -i \"s|ZEPPELINURL|",
                       {
                         "Ref": "zeppelinurl"
                       },
-                      "/g\" /home/ec2-user/chef11/chef-repo/cookbooks/kylin/attributes/default.rb;",
+                      "|g\" /home/ec2-user/chef11/chef-repo/cookbooks/kylin/attributes/default.rb;",
                       "sed -i \"s/KYACCOUNTTOKEN/",
                       {
                         "Ref": "kyaccountToken"
