--- a/cookbooks/kap/templates/default/singlehdi.json.erb
+++ b/cookbooks/kap/templates/default/singlehdi.json.erb
@@ -409,16 +409,7 @@
             }
           ]
         },
-        "installScriptActions": [
-          {
-            "name": "[concat('KAP-install-v0','-' ,uniquestring(variables('applicationName')))]",
-            "uri": "https://raw.githubusercontent.com/Kyligence/Iaas-Applications/master/KAP/scripts/KAP-install_v0.sh",
-            "parameters": "[concat(parameters('clusterLoginUserName'), ' ', parameters('clusterLoginPassword'), ' ', parameters('metastoreName'), ' ', parameters('appType'), ' ', parameters('clusterName'), ' ', parameters('kaptoken'), ' ', parameters('kapagentid'),' ',parameters('kapurl'), ' ', parameters('kyanalyzerurl'),' ',parameters('zeppelinurl'))]",
-            "roles": [
-              "edgenode"
-            ]
-          }
-        ],
+        "installScriptActions": [],
         "uninstallScriptActions": [
           {
             "name": "[concat('KAP-uninstall-v0','-' ,uniquestring(variables('applicationName')))]",
