remove the duplicated database and change the access code to sshuser and sshpwd

--- a/cookbooks/kap/templates/default/sqlserver.json.erb
+++ b/cookbooks/kap/templates/default/sqlserver.json.erb
@@ -22,7 +22,7 @@
   "variables": {
     "sqlDatabase": {
       "serverName": "[concat(parameters('sqlvirtualMachinesname'))]",
-      "databaseName": "[concat(parameters('sqldatabaseName'))]"
+      "databaseName": "[concat(parameters('sqldatabaseName'), 'db')]"
     }
   },
   "resources": [
