--- a/cookbooks/kap/templates/default/sqlserver.json.erb
+++ b/cookbooks/kap/templates/default/sqlserver.json.erb
@@ -50,7 +50,7 @@
           },
           "apiVersion": "2015-05-01-preview",
           "dependsOn": [
-            "[concat('Microsoft.MySql/servers/',variables('sqlDatabase').serverName)]"
+            "[concat('Microsoft.Sql/servers/',variables('sqlDatabase').serverName)]"
           ],
           "properties": {
             "edition": "Basic",
