need remove this tow dependence which is not defined within the template

--- a/cookbooks/kap/templates/default/separatedhdi.json.erb
+++ b/cookbooks/kap/templates/default/separatedhdi.json.erb
@@ -253,8 +253,7 @@
       "location": "[parameters('location')]",
       "dependsOn": [
         "[concat('Microsoft.Storage/storageAccounts/',parameters('storageAccount1'))]",
-        "[concat('Microsoft.Storage/storageAccounts/',parameters('storageAccount2'))]",
-        "AllowAllAzureIps"
+        "[concat('Microsoft.Storage/storageAccounts/',parameters('storageAccount2'))]"
       ],
       "properties": {
         "clusterVersion": "[parameters('clusterVersion')]",
