--- a/cookbooks/kap/templates/default/aws_chefServer.template.erb
+++ b/cookbooks/kap/templates/default/aws_chefServer.template.erb
@@ -768,7 +768,7 @@
                       {
                         "Ref": "kapagentid"
                       },
-                      "/g\" /home/ec2-user/chef11/chef-repo/cookbooks/kylin/attributes/default.rb",
+                      "/g\" /home/ec2-user/chef11/chef-repo/cookbooks/kylin/attributes/default.rb;",
                       "sed -i \"s/CHEFPRIVATEBUCKET/",
                       {
                         "Ref": "PrivateKeyBucket"
