change default size to Standard_D3

--- a/cookbooks/kap/templates/default/singlehdi.json.erb
+++ b/cookbooks/kap/templates/default/singlehdi.json.erb
@@ -106,7 +106,7 @@
       "metadata": {
         "description": "Size of the edge node that hosts the application"
       },
-      "defaultValue": "Standard_D3_V2",
+      "defaultValue": "Standard_D3",
       "allowedValues": [
         "Standard_D3",
         "Standard_D4",
