support workernode size customize and set headnode zookeeper size to a appropriate value

--- a/cookbooks/kap/templates/default/deploywithcluster.parameters.json.erb
+++ b/cookbooks/kap/templates/default/deploywithcluster.parameters.json.erb
@@ -29,6 +29,9 @@
     "edgeNodeSize": {
       "value": "<%= @edgeNodeSize %>"
     },
+    "workerNodeSize": {
+      "value": "<%= @workerNodeSize %>"
+    },
     "location": {
       "value": "<%= @location %>"
     },
