--- a/cookbooks/kap/templates/default/deploywithcluster.json.erb
+++ b/cookbooks/kap/templates/default/deploywithcluster.json.erb
@@ -136,6 +136,26 @@
         "Standard_D14_V2"
       ]
     },
+    "workerNodeSize": {
+      "type": "string",
+      "metadata": {
+        "description": "Size of the worker node that hosts the application"
+      },
+      "defaultValue": "Standard_D3",
+      "allowedValues": [
+        "Standard_D3",
+        "Standard_D4",
+        "Standard_D12",
+        "Standard_D13",
+        "Standard_D14",
+        "Standard_D3_V2",
+        "Standard_D4_V2",
+        "Standard_D5_V2",
+        "Standard_D12_V2",
+        "Standard_D13_V2",
+        "Standard_D14_V2"
+      ]
+    },
     "appType": {
       "type": "string",
       "metadata": {
@@ -330,7 +350,7 @@
               "name": "workernode",
               "targetInstanceCount": "[parameters('clusterWorkerNodeCount')]",
               "hardwareProfile": {
-                "vmSize": "Standard_D3"
+                "vmSize": "[parameters('workerNodeSize')]"
               },
               "osProfile": {
                 "linuxOperatingSystemProfile": {
