--- a/cookbooks/kap/templates/default/singlehdi.json.erb
+++ b/cookbooks/kap/templates/default/singlehdi.json.erb
@@ -121,6 +121,26 @@
         "Standard_D14_V2"
       ]
     },
+    "workerNodeSize": {
+      "type": "string",
+      "metadata": {
+        "description": "Size of the worker node that hosts the application"
+      },
+      "defaultValue": "Standard_D3",
+      "allowedValues": [
+        "Standard_D3",
+        "Standard_D4",
+        "Standard_D12",
+        "Standard_D13",
+        "Standard_D14",
+        "Standard_D3_V2",
+        "Standard_D4_V2",
+        "Standard_D5_V2",
+        "Standard_D12_V2",
+        "Standard_D13_V2",
+        "Standard_D14_V2"
+      ]
+    },
     "sshUserName": {
       "type": "string",
       "defaultValue": "sshuser",
@@ -283,7 +303,7 @@
               "minInstanceCount": 1,
               "targetInstanceCount": 2,
               "hardwareProfile": {
-                "vmSize": "Standard_D3_V2"
+                "vmSize": "Standard_D3"
               },
               "osProfile": {
                 "linuxOperatingSystemProfile": {
@@ -302,7 +322,7 @@
               "minInstanceCount": 1,
               "targetInstanceCount": "[parameters('clusterWorkerNodeCount')]",
               "hardwareProfile": {
-                "vmSize": "Standard_D3_V2"
+                "vmSize": "[parameters('workerNodeSize')]"
               },
               "osProfile": {
                 "linuxOperatingSystemProfile": {
@@ -321,7 +341,7 @@
               "minInstanceCount": 1,
               "targetInstanceCount": 3,
               "hardwareProfile": {
-                "vmSize": "Standard_D3_V2"
+                "vmSize": "Standard_A3"
               },
               "osProfile": {
                 "linuxOperatingSystemProfile": {
