--- a/cookbooks/kap/templates/default/singlehdi.parameters.json.erb
+++ b/cookbooks/kap/templates/default/singlehdi.parameters.json.erb
@@ -23,6 +23,9 @@
     "edgeNodeSize": {
       "value": "<%= @edgeNodeSize %>"
     },
+    "workerNodeSize": {
+      "value": "<%= @workerNodeSize %>"
+    },
     "location": {
       "value": "<%= @location %>"
     },
