support aws core instance type customize

--- a/cookbooks/kap/templates/default/aws_chefServer.template.erb
+++ b/cookbooks/kap/templates/default/aws_chefServer.template.erb
@@ -126,6 +126,11 @@
       "Description": "cluster admin username to be deployed",
       "Type": "String"
     },
+    "CoreInstanceType":{
+      "Description": "core instance type",
+      "Type": "String",
+      "Default": "m3.xlarge"
+    },
     "kapurl":{
       "Description": "kap package download url",
       "Type": "String"
@@ -370,6 +375,10 @@
                       "\",\n  \"INSTANCECOUNT\": \"",
                       {
                         "Ref": "InstanceCount"
+                      },
+                      "\"\n \"COREINSTANCETYPE\": \"",
+                      {
+                        "Ref": "CoreInstanceType"
                       },
                       "\"\n",
                       "}"
