--- a/cookbooks/kap/templates/default/aws_chefServer.template.erb
+++ b/cookbooks/kap/templates/default/aws_chefServer.template.erb
@@ -376,7 +376,7 @@
                       {
                         "Ref": "InstanceCount"
                       },
-                      "\"\n \"COREINSTANCETYPE\": \"",
+                      "\",\n \"COREINSTANCETYPE\": \"",
                       {
                         "Ref": "CoreInstanceType"
                       },
