set rpc timeout to 3600000

--- a/cookbooks/kap/templates/default/aws_chefServer.template.erb
+++ b/cookbooks/kap/templates/default/aws_chefServer.template.erb
@@ -492,6 +492,7 @@
                               "  {\n",
                               "    \"Classification\": \"hbase-site\",\n",
                               "    \"Properties\": {\n",
+                              "      \"hbase.rpc.timeout\": \"3600000\", \n",
                               "      \"hbase.rootdir\": \"s3://",
                               {
                                   "Ref": "PrivateKeyBucket"
