Revert "Merge branch 'docker-general-kyligence' of git.coding.net:chankongching/bootcloud into docker-general-kyligence"
This reverts commit 873da5528d5b4bc26bdd10433d0a22cee1f7fe85, reversing
changes made to 6ab0c8c4897cada85b7f1968b1a6bb4cb72e2a3a.

--- a/cookbooks/kap/templates/default/singlehdi.json.erb
+++ b/cookbooks/kap/templates/default/singlehdi.json.erb
@@ -409,14 +409,7 @@
             }
           ]
         },
-        "installScriptActions": [
-          {
-            "name": "[concat('KAP-install-v0','-' ,uniquestring(variables('applicationName')))]",
-            "uri": "https://raw.githubusercontent.com/Kyligence/Iaas-Applications/master/KAP/scripts/KAP_nothing_v0.sh",
-            "parameters": "",
-            "roles":["edgenode"]
-          }
-        ],
+        "installScriptActions": [],
         "uninstallScriptActions": [
           {
             "name": "[concat('KAP-uninstall-v0','-' ,uniquestring(variables('applicationName')))]",
