missing app write log to awserror and change azure zoookeeper vmsize to small

--- a/cookbooks/kap/templates/default/separatedhdi.json.erb
+++ b/cookbooks/kap/templates/default/separatedhdi.json.erb
@@ -365,7 +365,7 @@
               "minInstanceCount": 1,
               "targetInstanceCount": 3,
               "hardwareProfile": {
-                "vmSize": "Standard_A3"
+                "vmSize": "Small"
               },
               "osProfile": {
                 "linuxOperatingSystemProfile": {
