--- a/cookbooks/kap/templates/default/singlehdi.json.erb
+++ b/cookbooks/kap/templates/default/singlehdi.json.erb
@@ -341,7 +341,7 @@
               "minInstanceCount": 1,
               "targetInstanceCount": 3,
               "hardwareProfile": {
-                "vmSize": "Standard_A3"
+                "vmSize": "Small"
               },
               "osProfile": {
                 "linuxOperatingSystemProfile": {
